backend/src/main/java/com/example/library/error/UserNotFoundException.java
package com.example.library.error;

public class UserNotFoundException extends Throwable {
}
